--- a/Scintilla.vcxproj
+++ b/Scintilla.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{5877B917-512B-49F5-B514-1B4159E7A9CA}</ProjectGuid>
     <ProjectName>Scintilla</ProjectName>
     <RootNamespace>Scintilla</RootNamespace>
-    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -31,7 +31,7 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='10.0'">v100</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='12.0'">v120_xp</PlatformToolset>
-    <PlatformToolset Condition="'$(VisualStudioVersion)'=='14.0'">v140</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)'=='14.0'">v140_xp</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='15.0'">v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
@@ -39,7 +39,7 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='10.0'">v100</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='12.0'">v120_xp</PlatformToolset>
-    <PlatformToolset Condition="'$(VisualStudioVersion)'=='14.0'">v140</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)'=='14.0'">v140_xp</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='15.0'">v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -47,7 +47,7 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='10.0'">v100</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='12.0'">v120_xp</PlatformToolset>
-    <PlatformToolset Condition="'$(VisualStudioVersion)'=='14.0'">v140</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)'=='14.0'">v140_xp</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='15.0'">v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
@@ -56,7 +56,7 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='10.0'">v100</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='12.0'">v120_xp</PlatformToolset>
-    <PlatformToolset Condition="'$(VisualStudioVersion)'=='14.0'">v140</PlatformToolset>
+    <PlatformToolset Condition="'$(VisualStudioVersion)'=='14.0'">v140_xp</PlatformToolset>
     <PlatformToolset Condition="'$(VisualStudioVersion)'=='15.0'">v141</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
   </PropertyGroup>
@@ -115,36 +115,48 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>include;lexlib;src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;lexlib;src;../onigmo;../onigmo/win32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <Optimization>Disabled</Optimization>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
-      <PreprocessorDefinitions>_SCL_SECURE_NO_WARNINGS;SCI_OWNREGEX;WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES;STATIC_BUILD;SCI_LEXER;USE_D2D;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_SCL_SECURE_NO_WARNINGS;SCI_OWNREGEX;ONIG_EXTERN=extern;WIN32;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES;STATIC_BUILD;SCI_LEXER;USE_D2D;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <SmallerTypeCheck>false</SmallerTypeCheck>
+      <OmitFramePointers />
+      <StringPooling>true</StringPooling>
+      <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
+      <FloatingPointModel>Fast</FloatingPointModel>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <ProjectReference>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
     </ProjectReference>
+    <Lib>
+      <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
+    </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>include;lexlib;src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;lexlib;src;../onigmo;../onigmo/win32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <Optimization>Disabled</Optimization>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
-      <PreprocessorDefinitions>_SCL_SECURE_NO_WARNINGS;SCI_OWNREGEX;_WIN64;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES;STATIC_BUILD;SCI_LEXER;USE_D2D;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_SCL_SECURE_NO_WARNINGS;SCI_OWNREGEX;ONIG_EXTERN=extern;_WIN64;_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES;STATIC_BUILD;SCI_LEXER;USE_D2D;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <SmallerTypeCheck>false</SmallerTypeCheck>
+      <StringPooling>true</StringPooling>
+      <FloatingPointModel>Fast</FloatingPointModel>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Lib>
       <TargetMachine>MachineX64</TargetMachine>
+      <LinkTimeCodeGeneration>false</LinkTimeCodeGeneration>
     </Lib>
     <ProjectReference>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
@@ -152,15 +164,21 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <AdditionalIncludeDirectories>include;lexlib;src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;lexlib;src;../onigmo;../onigmo/win32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <EnableEnhancedInstructionSet Condition="'$(VisualStudioVersion)'&gt;'10.0'">NoExtensions</EnableEnhancedInstructionSet>
+      <EnableEnhancedInstructionSet Condition="'$(VisualStudioVersion)'&gt;'10.0'">StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <Optimization>MaxSpeed</Optimization>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
-      <PreprocessorDefinitions>_SCL_SECURE_NO_WARNINGS;SCI_OWNREGEX;WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES;STATIC_BUILD;SCI_LEXER;USE_D2D;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_SCL_SECURE_NO_WARNINGS;SCI_OWNREGEX;ONIG_EXTERN=extern;WIN32;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES;STATIC_BUILD;SCI_LEXER;USE_D2D;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
+      <WholeProgramOptimization>true</WholeProgramOptimization>
+      <OmitFramePointers />
+      <FloatingPointModel>Fast</FloatingPointModel>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
+      <StringPooling>true</StringPooling>
     </ClCompile>
     <ProjectReference>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
@@ -168,14 +186,19 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>include;lexlib;src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;lexlib;src;../onigmo;../onigmo/win32;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <Optimization>MaxSpeed</Optimization>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
-      <PreprocessorDefinitions>_SCL_SECURE_NO_WARNINGS;SCI_OWNREGEX;_WIN64;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES;STATIC_BUILD;SCI_LEXER;USE_D2D;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_SCL_SECURE_NO_WARNINGS;SCI_OWNREGEX;ONIG_EXTERN=extern;_WIN64;NDEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES;STATIC_BUILD;SCI_LEXER;USE_D2D;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
+      <WholeProgramOptimization>true</WholeProgramOptimization>
+      <FloatingPointModel>Fast</FloatingPointModel>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
+      <StringPooling>true</StringPooling>
     </ClCompile>
     <Lib>
       <TargetMachine>MachineX64</TargetMachine>
@@ -185,7 +208,62 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="deelx\DeelxRegexSearch.cxx" />
+    <ClCompile Include="..\onigmo\enc\ascii.c" />
+    <ClCompile Include="..\onigmo\enc\big5.c" />
+    <ClCompile Include="..\onigmo\enc\cp949.c" />
+    <ClCompile Include="..\onigmo\enc\emacs_mule.c" />
+    <ClCompile Include="..\onigmo\enc\euc_jp.c" />
+    <ClCompile Include="..\onigmo\enc\euc_kr.c" />
+    <ClCompile Include="..\onigmo\enc\euc_tw.c" />
+    <ClCompile Include="..\onigmo\enc\gb18030.c" />
+    <ClCompile Include="..\onigmo\enc\gbk.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_1.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_10.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_11.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_13.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_14.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_15.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_16.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_2.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_3.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_4.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_5.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_6.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_7.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_8.c" />
+    <ClCompile Include="..\onigmo\enc\iso_8859_9.c" />
+    <ClCompile Include="..\onigmo\enc\koi8_r.c" />
+    <ClCompile Include="..\onigmo\enc\koi8_u.c" />
+    <ClCompile Include="..\onigmo\enc\mktable.c" />
+    <ClCompile Include="..\onigmo\enc\shift_jis.c" />
+    <ClCompile Include="..\onigmo\enc\unicode.c" />
+    <ClCompile Include="..\onigmo\enc\us_ascii.c" />
+    <ClCompile Include="..\onigmo\enc\utf_16be.c" />
+    <ClCompile Include="..\onigmo\enc\utf_16le.c" />
+    <ClCompile Include="..\onigmo\enc\utf_32be.c" />
+    <ClCompile Include="..\onigmo\enc\utf_32le.c" />
+    <ClCompile Include="..\onigmo\enc\utf_8.c" />
+    <ClCompile Include="..\onigmo\enc\windows_1250.c" />
+    <ClCompile Include="..\onigmo\enc\windows_1251.c" />
+    <ClCompile Include="..\onigmo\enc\windows_1252.c" />
+    <ClCompile Include="..\onigmo\enc\windows_1253.c" />
+    <ClCompile Include="..\onigmo\enc\windows_1254.c" />
+    <ClCompile Include="..\onigmo\enc\windows_1257.c" />
+    <ClCompile Include="..\onigmo\enc\windows_31j.c" />
+    <ClCompile Include="..\onigmo\regcomp.c" />
+    <ClCompile Include="..\onigmo\regenc.c" />
+    <ClCompile Include="..\onigmo\regerror.c" />
+    <ClCompile Include="..\onigmo\regexec.c" />
+    <ClCompile Include="..\onigmo\regext.c" />
+    <ClCompile Include="..\onigmo\reggnu.c" />
+    <ClCompile Include="..\onigmo\regparse.c" />
+    <ClCompile Include="..\onigmo\regposerr.c" />
+    <ClCompile Include="..\onigmo\regposix.c" />
+    <ClCompile Include="..\onigmo\regsyntax.c" />
+    <ClCompile Include="..\onigmo\regtrav.c" />
+    <ClCompile Include="..\onigmo\regversion.c" />
+    <ClCompile Include="..\onigmo\st.c" />
+    <ClCompile Include="..\scionigmo\OnigmoRegExEngine.cxx" />
     <ClCompile Include="lexers\LexAHK.cxx" />
     <ClCompile Include="lexers\LexAsm.cxx" />
     <ClCompile Include="lexers\LexAU3.cxx" />
@@ -197,6 +275,7 @@
     <ClCompile Include="lexers\LexConf.cxx" />
     <ClCompile Include="lexers\LexCPP.cxx" />
     <ClCompile Include="lexers\LexCSS.cxx" />
+    <ClCompile Include="lexers\LexD.cxx" />
     <ClCompile Include="lexers\LexDiff.cxx" />
     <ClCompile Include="lexers\LexErrorList.cxx" />
     <ClCompile Include="lexers\LexHTML.cxx" />
@@ -207,6 +286,7 @@
     <ClCompile Include="lexers\LexMake.cxx" />
     <ClCompile Include="lexers\LexMarkdown.cxx" />
     <ClCompile Include="lexers\LexMatlab.cxx" />
+    <ClCompile Include="lexers\LexNimrod.cxx" />
     <ClCompile Include="lexers\LexNsis.cxx" />
     <ClCompile Include="lexers\LexNull.cxx" />
     <ClCompile Include="lexers\LexPascal.cxx" />
@@ -214,6 +294,7 @@
     <ClCompile Include="lexers\LexPowerShell.cxx" />
     <ClCompile Include="lexers\LexProps.cxx" />
     <ClCompile Include="lexers\LexPython.cxx" />
+    <ClCompile Include="lexers\LexR.cxx" />
     <ClCompile Include="lexers\LexRegistry.cxx" />
     <ClCompile Include="lexers\LexRuby.cxx" />
     <ClCompile Include="lexers\LexSQL.cxx" />
@@ -224,6 +305,7 @@
     <ClCompile Include="lexlib\Accessor.cxx" />
     <ClCompile Include="lexlib\CharacterCategory.cxx" />
     <ClCompile Include="lexlib\CharacterSet.cxx" />
+    <ClCompile Include="lexlib\DefaultLexer.cxx" />
     <ClCompile Include="lexlib\LexerBase.cxx" />
     <ClCompile Include="lexlib\LexerModule.cxx" />
     <ClCompile Include="lexlib\LexerNoExceptions.cxx" />
@@ -239,6 +321,7 @@
     <ClCompile Include="src\CellBuffer.cxx" />
     <ClCompile Include="src\CharClassify.cxx" />
     <ClCompile Include="src\ContractionState.cxx" />
+    <ClCompile Include="src\DBCS.cxx" />
     <ClCompile Include="src\Decoration.cxx" />
     <ClCompile Include="src\Document.cxx" />
     <ClCompile Include="src\EditModel.cxx" />
@@ -261,11 +344,25 @@
     <ClCompile Include="src\XPM.cxx" />
     <ClCompile Include="win32\HanjaDic.cxx" />
     <ClCompile Include="win32\PlatWin.cxx" />
+    <ClCompile Include="win32\ScintillaDLL.cxx" />
     <ClCompile Include="win32\ScintillaWin.cxx" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="deelx\deelx64.h" />
+    <ClInclude Include="..\onigmo\enc\iso_8859.h" />
+    <ClInclude Include="..\onigmo\enc\jis\props.h" />
+    <ClInclude Include="..\onigmo\enc\shift_jis.h" />
+    <ClInclude Include="..\onigmo\enc\unicode\casefold.h" />
+    <ClInclude Include="..\onigmo\enc\unicode\name2ctype.h" />
+    <ClInclude Include="..\onigmo\onigmo.h" />
+    <ClInclude Include="..\onigmo\onigmognu.h" />
+    <ClInclude Include="..\onigmo\onigmoposix.h" />
+    <ClInclude Include="..\onigmo\regenc.h" />
+    <ClInclude Include="..\onigmo\regint.h" />
+    <ClInclude Include="..\onigmo\regparse.h" />
+    <ClInclude Include="..\onigmo\st.h" />
+    <ClInclude Include="..\onigmo\win32\config.h" />
     <ClInclude Include="include\ILexer.h" />
+    <ClInclude Include="include\ILoader.h" />
     <ClInclude Include="include\Platform.h" />
     <ClInclude Include="include\SciLexer.h" />
     <ClInclude Include="include\Scintilla.h" />
@@ -273,6 +370,7 @@
     <ClInclude Include="lexlib\Accessor.h" />
     <ClInclude Include="lexlib\CharacterCategory.h" />
     <ClInclude Include="lexlib\CharacterSet.h" />
+    <ClInclude Include="lexlib\DefaultLexer.h" />
     <ClInclude Include="lexlib\LexAccessor.h" />
     <ClInclude Include="lexlib\LexerBase.h" />
     <ClInclude Include="lexlib\LexerModule.h" />
@@ -293,14 +391,17 @@
     <ClInclude Include="src\CellBuffer.h" />
     <ClInclude Include="src\CharClassify.h" />
     <ClInclude Include="src\ContractionState.h" />
+    <ClInclude Include="src\DBCS.h" />
     <ClInclude Include="src\Decoration.h" />
     <ClInclude Include="src\Document.h" />
     <ClInclude Include="src\EditModel.h" />
     <ClInclude Include="src\Editor.h" />
     <ClInclude Include="src\EditView.h" />
+    <ClInclude Include="src\ElapsedPeriod.h" />
     <ClInclude Include="src\ExternalLexer.h" />
     <ClInclude Include="src\FontQuality.h" />
     <ClInclude Include="src\Indicator.h" />
+    <ClInclude Include="src\IntegerRectangle.h" />
     <ClInclude Include="src\KeyMap.h" />
     <ClInclude Include="src\LineMarker.h" />
     <ClInclude Include="src\MarginView.h" />
@@ -321,9 +422,7 @@
     <ClInclude Include="src\ViewStyle.h" />
     <ClInclude Include="src\XPM.h" />
     <ClInclude Include="win32\PlatWin.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="deelx\doc\deelx_en.chm" />
+    <ClInclude Include="win32\ScintillaWin.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
