+ add: NP3 development changes

--- a/Scintilla.vcxproj.filters
+++ b/Scintilla.vcxproj.filters
@@ -450,6 +450,9 @@
     <ClCompile Include="win32\ScintillaDLL.cxx">
       <Filter>win32</Filter>
     </ClCompile>
+    <ClCompile Include="lexers\LexRust.cxx">
+      <Filter>lexers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\ILexer.h">
