--- a/Scintilla.vcxproj
+++ b/Scintilla.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{5877B917-512B-49F5-B514-1B4159E7A9CA}</ProjectGuid>
     <ProjectName>Scintilla</ProjectName>
     <RootNamespace>Scintilla</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -177,8 +177,10 @@
       <OmitFramePointers />
       <FloatingPointModel>Fast</FloatingPointModel>
       <LanguageStandard>stdcpplatest</LanguageStandard>
-      <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <StringPooling>true</StringPooling>
+      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
     </ClCompile>
     <ProjectReference>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
@@ -197,8 +199,10 @@
       <WholeProgramOptimization>true</WholeProgramOptimization>
       <FloatingPointModel>Fast</FloatingPointModel>
       <LanguageStandard>stdcpplatest</LanguageStandard>
-      <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <StringPooling>true</StringPooling>
+      <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
     </ClCompile>
     <Lib>
       <TargetMachine>MachineX64</TargetMachine>
@@ -209,47 +213,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\onigmo\enc\ascii.c" />
-    <ClCompile Include="..\onigmo\enc\big5.c" />
-    <ClCompile Include="..\onigmo\enc\cp949.c" />
-    <ClCompile Include="..\onigmo\enc\emacs_mule.c" />
-    <ClCompile Include="..\onigmo\enc\euc_jp.c" />
-    <ClCompile Include="..\onigmo\enc\euc_kr.c" />
-    <ClCompile Include="..\onigmo\enc\euc_tw.c" />
-    <ClCompile Include="..\onigmo\enc\gb18030.c" />
-    <ClCompile Include="..\onigmo\enc\gbk.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_1.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_10.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_11.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_13.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_14.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_15.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_16.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_2.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_3.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_4.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_5.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_6.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_7.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_8.c" />
-    <ClCompile Include="..\onigmo\enc\iso_8859_9.c" />
-    <ClCompile Include="..\onigmo\enc\koi8_r.c" />
-    <ClCompile Include="..\onigmo\enc\koi8_u.c" />
     <ClCompile Include="..\onigmo\enc\mktable.c" />
-    <ClCompile Include="..\onigmo\enc\shift_jis.c" />
     <ClCompile Include="..\onigmo\enc\unicode.c" />
     <ClCompile Include="..\onigmo\enc\us_ascii.c" />
-    <ClCompile Include="..\onigmo\enc\utf_16be.c" />
-    <ClCompile Include="..\onigmo\enc\utf_16le.c" />
-    <ClCompile Include="..\onigmo\enc\utf_32be.c" />
-    <ClCompile Include="..\onigmo\enc\utf_32le.c" />
     <ClCompile Include="..\onigmo\enc\utf_8.c" />
-    <ClCompile Include="..\onigmo\enc\windows_1250.c" />
-    <ClCompile Include="..\onigmo\enc\windows_1251.c" />
-    <ClCompile Include="..\onigmo\enc\windows_1252.c" />
-    <ClCompile Include="..\onigmo\enc\windows_1253.c" />
-    <ClCompile Include="..\onigmo\enc\windows_1254.c" />
-    <ClCompile Include="..\onigmo\enc\windows_1257.c" />
-    <ClCompile Include="..\onigmo\enc\windows_31j.c" />
     <ClCompile Include="..\onigmo\regcomp.c" />
     <ClCompile Include="..\onigmo\regenc.c" />
     <ClCompile Include="..\onigmo\regerror.c" />
@@ -287,7 +254,7 @@
     <ClCompile Include="lexers\LexMake.cxx" />
     <ClCompile Include="lexers\LexMarkdown.cxx" />
     <ClCompile Include="lexers\LexMatlab.cxx" />
-    <ClCompile Include="lexers\LexNimrod.cxx" />
+    <ClCompile Include="lexers\LexNim.cxx" />
     <ClCompile Include="lexers\LexNsis.cxx" />
     <ClCompile Include="lexers\LexNull.cxx" />
     <ClCompile Include="lexers\LexPascal.cxx" />
@@ -349,9 +316,7 @@
     <ClCompile Include="win32\ScintillaWin.cxx" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\onigmo\enc\iso_8859.h" />
     <ClInclude Include="..\onigmo\enc\jis\props.h" />
-    <ClInclude Include="..\onigmo\enc\shift_jis.h" />
     <ClInclude Include="..\onigmo\enc\unicode\casefold.h" />
     <ClInclude Include="..\onigmo\enc\unicode\name2ctype.h" />
     <ClInclude Include="..\onigmo\onigmo.h" />
