+upd: Scintilla Lib v5.1.4

--- a/win32/makefile
+++ b/win32/makefile
@@ -117,11 +117,13 @@ COMPONENT_OBJS = \
 	HanjaDic.o \
 	PlatWin.o \
 	ScintillaBase.o \
+	ScintillaWin.o
+
+SHARED_OBJS = \
 	ScintillaDLL.o \
-	ScintillaWin.o \
 	ScintRes.o
 
-$(COMPONENT): $(COMPONENT_OBJS)
+$(COMPONENT): $(COMPONENT_OBJS) $(SHARED_OBJS)
 	$(CXX) $(LDFLAGS) -o $@ $(STRIPFLAG) $^ $(CXXFLAGS) $(LIBS)
 
 $(LIBSCI): $(COMPONENT_OBJS)
@@ -131,6 +133,6 @@ $(LIBSCI): $(COMPONENT_OBJS)
 # Automatically generate dependencies for most files with "make deps"
 include deps.mak
 
-ScintRes.o:	ScintRes.rc
-	$(WINDRES) ScintRes.rc $@
+ScintRes.o: ScintRes.rc
+	$(WINDRES) $< $@
 
