--- a/win32/makefile
+++ b/win32/makefile
@@ -9,6 +9,7 @@
 
 .SUFFIXES: .cxx .c .o .h .a
 
+DIR_O=.
 DIR_BIN=../bin
 
 COMPONENT = $(DIR_BIN)/Scintilla.dll
@@ -68,10 +69,10 @@ CXX_ALL_FLAGS =$(DEFINES) $(INCLUDES) $(CXX_BASE_FLAGS)
 all:	$(COMPONENT) $(LIBSCI)
 
 clean:
-	$(DEL) *.exe *.o *.a *.obj *.dll *.res *.map *.plist $(call normalize,$(LIBSCI))
+	$(DEL) $(call normalize, $(addprefix $(DIR_O)/, *.exe *.o *.a *.obj *.dll *.res *.map *.plist) $(COMPONENT) $(LIBSCI))
 
-%.o: %.cxx
-	$(CXX) $(CXX_ALL_FLAGS) $(CXXFLAGS) -c $<
+$(DIR_O)/%.o: %.cxx
+	$(CXX) $(CXX_ALL_FLAGS) $(CXXFLAGS) -c $< -o $@
 
 analyze:
 	$(CXX) --analyze $(CXX_ALL_FLAGS) $(CXXFLAGS) *.cxx ../src/*.cxx
@@ -81,47 +82,47 @@ depend deps.mak:
 
 # Required for base Scintilla
 SRC_OBJS = \
-	AutoComplete.o \
-	CallTip.o \
-	CaseConvert.o \
-	CaseFolder.o \
-	CellBuffer.o \
-	CharacterCategoryMap.o \
-	CharacterType.o \
-	CharClassify.o \
-	ContractionState.o \
-	DBCS.o \
-	Decoration.o \
-	Document.o \
-	EditModel.o \
-	Editor.o \
-	EditView.o \
-	Geometry.o \
-	Indicator.o \
-	KeyMap.o \
-	LineMarker.o \
-	MarginView.o \
-	PerLine.o \
-	PositionCache.o \
-	RESearch.o \
-	RunStyles.o \
-	Selection.o \
-	Style.o \
-	UniConversion.o \
-	UniqueString.o \
-	ViewStyle.o \
-	XPM.o
+	$(DIR_O)/AutoComplete.o \
+	$(DIR_O)/CallTip.o \
+	$(DIR_O)/CaseConvert.o \
+	$(DIR_O)/CaseFolder.o \
+	$(DIR_O)/CellBuffer.o \
+	$(DIR_O)/CharacterCategoryMap.o \
+	$(DIR_O)/CharacterType.o \
+	$(DIR_O)/CharClassify.o \
+	$(DIR_O)/ContractionState.o \
+	$(DIR_O)/DBCS.o \
+	$(DIR_O)/Decoration.o \
+	$(DIR_O)/Document.o \
+	$(DIR_O)/EditModel.o \
+	$(DIR_O)/Editor.o \
+	$(DIR_O)/EditView.o \
+	$(DIR_O)/Geometry.o \
+	$(DIR_O)/Indicator.o \
+	$(DIR_O)/KeyMap.o \
+	$(DIR_O)/LineMarker.o \
+	$(DIR_O)/MarginView.o \
+	$(DIR_O)/PerLine.o \
+	$(DIR_O)/PositionCache.o \
+	$(DIR_O)/RESearch.o \
+	$(DIR_O)/RunStyles.o \
+	$(DIR_O)/Selection.o \
+	$(DIR_O)/Style.o \
+	$(DIR_O)/UniConversion.o \
+	$(DIR_O)/UniqueString.o \
+	$(DIR_O)/ViewStyle.o \
+	$(DIR_O)/XPM.o
 
 COMPONENT_OBJS = \
 	$(SRC_OBJS) \
-	HanjaDic.o \
-	PlatWin.o \
-	ScintillaBase.o \
-	ScintillaWin.o
+	$(DIR_O)/HanjaDic.o \
+	$(DIR_O)/PlatWin.o \
+	$(DIR_O)/ScintillaBase.o \
+	$(DIR_O)/ScintillaWin.o
 
 SHARED_OBJS = \
-	ScintillaDLL.o \
-	ScintRes.o
+	$(DIR_O)/ScintillaDLL.o \
+	$(DIR_O)/ScintRes.o
 
 $(COMPONENT): $(COMPONENT_OBJS) $(SHARED_OBJS)
 	$(CXX) $(LDFLAGS) -o $@ $(STRIPFLAG) $^ $(CXXFLAGS) $(LIBS)
@@ -130,9 +131,9 @@ $(LIBSCI): $(COMPONENT_OBJS)
 	$(AR) $(ARFLAGS) $@ $^
 	$(RANLIB) $@
 
-# Automatically generate dependencies for most files with "make deps"
+# Automatically generate dependencies for most files with "make depend"
 include deps.mak
 
-ScintRes.o: ScintRes.rc
+$(DIR_O)/ScintRes.o: ScintRes.rc
 	$(WINDRES) $< $@
 
